# dpette-usb-driver

./: .gitignore  .lychee.toml  .pre-commit-config.yaml  AGENTS.md  AGENT_LEARNINGS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/: settings.json
.claude/rules/: serial-protocol.md  tools-hygiene.md
.github/: dependabot.yml
.github/templates/: llms.txt.tpl
.github/workflows/: ci.yml  codeql.yml  generate-sbom.yaml  links.yml  write-llms-txt.yaml
captures/static-analysis/: all_functions.txt
docs/: EXPERIMENT_LOG.md  HARDWARE.md  HARDWARE_MOD.md  LICENSING_ASSESSMENT.md  OVERVIEW.md  PROTOCOL_NOTES.md  SAFETY_MODEL.md  llms.txt
docs/SBOM/: syft-scan.spdx.json
examples/: basic_pipette.py  read_eeprom.py  test_b2_volume.py  test_dilution.py  test_driver_modes.py  test_driver_modes_2.py  test_mix.py  test_remote_mode.py  volume_control.py
src/dpette/: __init__.py  config.py  driver.py  logging_utils.py  protocol.py  safety.py  serial_link.py
tests/: test_driver.py  test_protocol.py  test_serial_link.py
tools/: brute_cmd.py  capture_usb.py  confirm_motor.py  dump_raw.py  find_dispense.py  fix_err4.py  interactive_post_aspirate.py  interactive_probe.py  interactive_vol_increment.py  passive_listen.py  probe_a3.py  probe_cali_flow.py  probe_response_format.py  probe_start_calibrate.py  quick_test.py  read_eeprom2.py  read_eeprom3.py  replay_trace.py  scan_baud.py  test_cal_aspirate.py  test_cali_mode.py  test_cali_volume_persist.py  test_cali_volumes.py  test_stay_in_cal.py  try_dtr_rts_reset.py
tools/archive/: auto_aspirate_state.py  brute_header.py  clear_error.py  eeprom_write_read.py  exit_cal_and_test.py  find_dispense.py  interactive_post_aspirate.py  interactive_vol_increment.py  interactive_volume.py  listen_after_handshake.py  probe_a4_read.py  probe_b_slow.py  probe_handshake.py  probe_new_cmds.py  quick_aspirate_dispense.py  read_eeprom.py  read_volume_change.py  sweep_addresses.py  test_a6_at_max.py  test_a6_fresh.py  test_a6_single_200.py  test_a6_then_aspirate.py  test_full_flow.py
