[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dpette"
version = "0.2.0"
description = "Reverse-engineered USB/serial driver for DLAB dPette electronic pipettes"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["pipette", "dlab", "dpette", "serial", "lab-automation", "liquid-handling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyserial>=3.5,<4",
]

[project.urls]
Homepage = "https://github.com/Lambda-Biolab/dpette-usb-driver"
Issues = "https://github.com/Lambda-Biolab/dpette-usb-driver/issues"
Documentation = "https://github.com/Lambda-Biolab/dpette-usb-driver/blob/main/docs/PROTOCOL_NOTES.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10",
    "pytest-mock>=3.12,<4",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
    "types-pyserial>=3.5",
    "pre-commit>=3.7,<5",
    "complexipy>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dpette"]

[tool.ruff]
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "N", "UP",      # baseline
    "B", "A", "S", "SIM", "RUF", "PT",  # quality
    "TC", "PGH", "C90",                 # strictness
    "TRY",                              # try/except discipline
]
ignore = [
    "TRY003",  # long error messages outside exception classes — noisy on one-off defensive raises
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
# tools/ and tools/archive/ contain hardware-probe scripts with scientific
# notation (µL, en-dashes, etc.) and one-off code; relax style there.
"tools/*" = ["E501", "B007", "SIM115", "RUF001", "RUF002", "RUF003"]
"tools/archive/*" = [
    "E501", "B007", "SIM115", "C901",
    "RUF001", "RUF002", "RUF003",  # en-dashes and µ are intentional in these notes
    "S110", "S311", "S404", "S603", "S607",  # archive scripts: subprocess + bare excepts + non-crypto random are fine
    "TRY300", "TRY301",  # one-off try/except patterns
    "PGH003",  # bare type: ignore in throwaway code
    "PT",  # not pytest files
    "TC",  # type-check-only import discipline not enforced for scripts
]
"examples/*" = ["E501"]
"tests/*" = ["S101", "D"]  # tests use bare assert; docstrings not required

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "tools.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "test_remote_mode"
ignore_errors = true

[[tool.mypy.overrides]]
module = "test_b2_volume"
ignore_errors = true

[[tool.mypy.overrides]]
module = "test_mix"
ignore_errors = true

[[tool.mypy.overrides]]
module = "test_driver_modes"
ignore_errors = true

[[tool.mypy.overrides]]
module = "test_driver_modes_2"
ignore_errors = true

[[tool.mypy.overrides]]
module = "test_dilution"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m \"not hardware\""
markers = [
    "hardware: requires physical dPette device",
]
